пофиксил баги при создании упражнения( все ошибки связанные с связью мышцы - упражнение )